--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@remix-run/node": "^2.10.3",
     "@remix-run/react": "^2.10.3",
+    "lucide-react": "^0.417.0",
     "ofetch": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
